Спринт 2 - (3) - исправленные ошибки в HTML и CSS

--- a/how-to-learn-bootcamp/blocks/footer/footer.css
+++ b/how-to-learn-bootcamp/blocks/footer/footer.css
@@ -2,9 +2,8 @@
   min-height: 350px;
   background-color: #1f1f1f;
   color: white;
-  align-items: center;
+  align-items: stretch;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
 }
